syntax = "proto3";

package chat;

import "google/protobuf/empty.proto";

option go_package = "github.com/vizurth/chat-server/pkg/chat;chat";

service Chat {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
  repeated string usernames = 1;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  repeated string usernames = 1;
}

message SendMessageRequest {
  int64 chat_id = 1;
  string sender = 2;
  string content = 3;
}
